# Intruder

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
configs/: default.yaml
dashboard/: __init__.py  app.py
database/: __init__.py  models.py  repository.py
detector/: __init__.py
detector/camera/: __init__.py  manager.py
detector/face_detection/: __init__.py  engine.py
detector/lockscreen/: __init__.py  monitor.py
detector/motion/: __init__.py  detector.py
detector/recognition/: __init__.py  engine.py
intruder_detector/: __init__.py  __main__.py  config.py  daemon.py  logging_setup.py  pipeline.py  session.py
intruder_detector/cli/: __init__.py  history.py  main.py  profile.py  setup.py
logs/: __init__.py  alerts.py
profile/: __init__.py
profile/embeddings/: __init__.py  manager.py
profile/enrollment/: __init__.py  capture.py
profile/retraining/: __init__.py  updater.py
scripts/: install.sh
security/: __init__.py
security/encryption/: __init__.py  crypto.py
security/password/: __init__.py  manager.py
security/secure_storage/: __init__.py  storage.py
systemd/: intruder-detector.service
