[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intruder-detector"
version = "1.0.0"
description = "Production Linux AI intruder detection daemon with facial recognition"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Intruder Detector" }]
dependencies = [
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "PyYAML>=6.0",
    "cryptography>=42.0.0",
    "Pillow>=10.0.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.16.0",
    "mediapipe>=0.10.9",
    "sqlalchemy>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "rich>=13.7.0",
    "click>=8.1.0",
    "httpx>=0.26.0",
    "typing-extensions>=4.9.0",
]

[project.optional-dependencies]
linux = ["dbus-python>=1.3.2"]

[project.scripts]
intruder-detector = "intruder_detector.cli.main:main"
intruder-setup = "intruder_detector.cli.setup:main"
intruder-history = "intruder_detector.cli.history:main"
intruder-profile = "intruder_detector.cli.profile:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["intruder_detector*", "detector*", "security*", "profile*", "database*", "dashboard*", "logs*"]
